Cambios realizados: - Splash con logos de la institución - Pantalla Login (Solo necesitaba hacerla para probar los cambios de pantalla, no importa si la cambias) - Activity de menu principal aún no la he personalizo, estoy buscando una opción para hacer un menú lateral - El icono de la aplicación tiene el del Colegio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="pasarpantalla">Pasar Pantalla</string>
     <string name="login">INICIE SESION</string>
+    <string name="imagen_de_login">imagen de login</string>>
+    <string name="nombreUsuario">Usuario</string>
+    <string name="password">Contaseña</string>
+    <string name="btn_iniciarSesion">Iniciar Sesión</string>
 </resources>
