- Creación de menú inferior - Incorporación de vectores de imagen (iconos) - Creación Activities para: Notas, Calendario, Aula virtual

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="notificaciones">Notificaciones</string>
     <string name="mensajes">Mensajes</string>
     <string name="perfil">Mi Perfil</string>
+    <string name="aula">CLASES 2020</string>
+    <string name="salir">Salir</string>
 </resources>
