Incorporación de spinner en el login, aun falta agregar y trabajar con más de un navigation drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="tituloMensajeSalida">Salirde la App</string>
     <string name="opcionSi">Si</string>
     <string name="opcionNo">No</string>
+    <string name="rol">Seleccione su rol</string>
 </resources>
