Creación de activities : calendario_maestro, menu_maestro , principal_maestro Ahorita me falta trabajar en el activity de aula virtual (es el más trabajoso) hay pequeños errores y consultas que no logro solventarlos, espero avanzar con lo demás y luego dedicarme solo a estos pequeños problemas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="btnLogin">Iniciar Sesión</string>
     <string name="contrase_a">Contraseña</string>
     <string name="mantener_sesi_n_iniciada">Mantener Sesión Iniciada</string>
-    <string name="txtView_informacion">Información</string>
+    <string name="txtView_informacion">Seleccione una fecha presionando el botón azul, y luego consulte el menú con el botón verde</string>
     <string name="edtext_datein">Seleccione una fecha</string>
     <string name="btn_consultarmenu">Consultar Menú</string>
     <string name="mensajePregunta">¿Desea salir de la aplicación?</string>
