--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,9 +63,19 @@
     <string name="rol">Seleccione su rol</string>
     <string name="info_ini">MODIFICAR LUEGO</string>
     <string name="bienvenido">Bienvenido:</string>
-    <string name="versiculomaestros">\'\'Yo te enseñaré\nY te instruiré en el camino que debes seguir;\nSeré tu consejero y\nEstarán mis ojos sobre ti.\'\'</string>
+    <string name="versiculomaestros">Yo te enseñaré\n\Y te instruiré en el camino que debes seguir;\n\Seré tu consejero y\n\Estarán mis ojos sobre ti.</string>
     <string name="platillos_disponibles">Platillos disponibles</string>
     <string name="boton_menu">Consultar menú</string>
     <string name="boton_DPmenú">ICONO COMIDA</string>
     <string name="fecha">Fecha que desea consultar</string>
+    <string name="opcion_clases">Clases</string>
+    <string name="descripcion_opcion_clases">Administrador de contenidos</string>
+    <string name="opcion_reportes">Reportes</string>
+    <string name="descripcion_opcion_reportes">Administrador de reportes</string>
+    <string name="opcion_asistencia">Asistencia</string>
+    <string name="descripcion_opcion_asistencia">Administrador de Asistencia</string>
+    <string name="opcion_trabajo_Docente">Trabajo Docente</string>
+    <string name="descripcion_trabajo_docente">Planificación docente</string>
+    <string name="opcion_prestamoEquipo">Préstamo de Equipo</string>
+    <string name="descripcion_prestamoEquipo">Reservar equipo</string>
 </resources>
