--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="descripcion_prestamoEquipo">Reservar equipo</string>
     <string name="indicacionescalendario">Esta opción está creada para gestionar de una mejor manera los eventos y actividades que se desean programar, para hacerlo únicamente deberá presionar sobre la fecha en la cual desea trabajar, luego de ellos aparecerán tres opciones para poder gestionar el contenido.</string>
     <string name="indicaciones_reserva">A continuación deberá completar los siguientes campos para realizar una reserva de equipo</string>
+    <string name="indicaciones_crearAviso">Por favor completar todos los campos para realizar un nuevo aviso</string>
 </resources>
