Agregadas pantallas de orientadosres  y grados y secciones,
Solución parcial aunque efectiva de problema al subir imagen de perfil de alumno

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,5 @@
     <string name="grados_y_secciones">Grados y Secciones</string>
     <string name="editar">Editar</string>
     <string name="desactivar">Desactivar</string>
+    <string name="drop">Eliminar</string>
 </resources>
