Cambios realizados: - Implementación de cardview en pantalla principal de alumno - Creación de eventos onclick para cada card - Creación de activities donde debe redirigir cada card (Tareas pendientes, avisos) - Creación de recursos de color para el cardview del alumno
Problemas por corregir
- No se porque pero al parecer cuando invoco el onclick de los card pasa por el onclick del perfil, aparece un mensaje abajo que solo es para el de perfil
- La parte de menú del alumno sigue sin funcionarme, ya le revisé los ID a todos los controles y se los cambie para evitar choques pero sigue apareciendo el mismo error "Null point ..."

En proceso:
- Estoy viendo un video de youtube donde "explica" de que manera hacer los onclick en los fragments , voy a crear una copia del proyecto y voy a trastear en esa copia, estaré hasta las 12 por acá

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,6 @@
     <string name="editar">Editar</string>
     <string name="desactivar">Desactivar</string>
     <string name="drop">Eliminar</string>
+    <string name="indicaciones_tareaspendientes">A continuación se encuentra una lista detallada de las tareas y actividades pendientes de su realización, le sugerimos tomar nota de las fechas acá mencionadas para realizar una entrega puntual de cada materia.</string>
+    <string name="indicaciones_avSistema">A continuación se muestra una lista con los avisos colocados por los administradores del Sistema, le sugerimos ante cualquier duda consultar con su Maestro guía o directamente en el área de dirección.</string>
 </resources>
