revisando y corrigiendo los warnings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,65 @@
     <string name="seleccionarmateria_contmaestros">Seleccione una materia:</string>
     <string name="boton_agregar_contenido">AGREGAR CONTENIDO</string>
     <string name="eliminar_contenidomaestro">ELIMINAR CONTENIDO</string>
+    <string name="subir_modificar_contenido">SUBIR / MODIFICAR CONTENIDO</string>
+    <string name="titulocontenido_maestro">Título del Contenido:</string>
+    <string name="nombrecontenido">Escriba el nombre aquí</string>
+    <string name="visibilidad_contenido">Visibilidad</string>
+    <string name="contvisible">VISIBLE (Pueden verlo)</string>
+    <string name="contoculto">OCULTO</string>
+    <string name="seleccione_contenido">Seleccione Contenido</string>
+    <string name="botonsubir_contenido">Subir Contenido</string>
+    <string name="spinnerseleccione_la_materia">Seleccione la Materia</string>
+    <string name="botonguardar_contenido">GUARDAR Contenido</string>
+    <string name="eliminar_contenido">ELIMINAR CONTENIDO</string>
+    <string name="contenido_cargado">Contenido cargado</string>
+    <string name="archivosubido_pdf">Archivosubido.pdf</string>
+    <string name="materia_seleccionada">Materia seleccionada</string>
+    <string name="administrador_de_pruebas">Administrador de Pruebas</string>
+    <string name="periodo">Seleccione período</string>
+    <string name="ponderacion">Seleccione una Ponderación</string>
+    <string name="pruebasponderacion">Pruebas para esta Ponderación</string>
+    <string name="nueva_prueba">Nueva Prueba</string>
+    <string name="crear_nueva_prueba">Crear Nueva Prueba</string>
+    <string name="indicaciones_pruebas">Tome en cuenta: Si añade una respuesta de tipo "Texto Corto" o "Texto Largo" a la prueba, la calificación automática se deshabilitará, ya que no se puede calificar automáticamente una respuesta libre</string>
+    <string name="nombre_de_la_prueba">Nombre de la Prueba</string>
+    <string name="descprueba">Descripción de la prueba</string>
+    <string name="porcentaje_de_la_prueba">Porcentaje de la Prueba</string>
+    <string name="inicioprueba">Fecha de Inicio de la prueba</string>
+    <string name="finalizacionprueba">Fecha Finalización Prueba</string>
+    <string name="duracionprueba">Duración de la prueba</string>
+    <string name="duracionprueba_min">Duración prueba (Minutos)</string>
+    <string name="checkbox_pruebavisible">Esta prueba es visible para los estudiantes</string>
+    <string name="checkbox_calificarautomatico">Esta prueba se calificará automáticamente</string>
+    <string name="guardar_prueba">Guardar Prueba</string>
+    <string name="adminActividades">Administrador de Actividades</string>
+    <string name="nueva_actividad">NUEVA ACTIVIDAD</string>
+    <string name="actividadesponderacion">Actividades para esta ponderación</string>
+    <string name="crear_nueva_actividad">Crear Nueva Tarea</string>
+    <string name="nombre_de_la_tarea">Nombre de la tarea</string>
+    <string name="desctarea">Descripción de la tarea</string>
+    <string name="porcentaje_de_la_tarea">Porcentaje de la tarea</string>
+    <string name="iniciotarea">Fecha inicio de la tarea</string>
+    <string name="finalizaciontarea">Fecha entrega final</string>
+    <string name="seleccionar_archivos_tareas">Seleccionar Archivos</string>
+    <string name="guardar_tarea">Guardar Tarea</string>
+    <string name="avisos_por_materia">AVISOS POR MATERIA</string>
+    <string name="crear_nuevo_aviso">Crear Nuevo Aviso</string>
+    <string name="seleccione_una_materia">Seleccione una materia :</string>
+    <string name="avisos_registrados">AVISOS REGISTRADOS:</string>
+    <string name="creador_de_avisos">CREADOR DE AVISOS</string>
+    <string name="titulo_del_aviso">Título del Aviso:</string>
+    <string name="escriba_aqu">Escriba aquí</string>
+    <string name="contenido">CONTENIDO</string>
+    <string name="mensaje">MENSAJE :</string>
+    <string name="estado_del_aviso">Estado del Aviso</string>
+    <string name="avisoactivado">Activado</string>
+    <string name="avisodesactivado">Desactivado</string>
+    <string name="guardar_aviso">GUARDAR AVISO</string>
+    <string name="btncancelar">CANCELAR AVISO</string>
+    <string name="reportes_calificaciones_por_materia">Reportes calificaciones por materia</string>
+    <string name="reportes_calificaciones_por_grado">Reportes calificaciones por grado</string>
+    <string name="reportes_calificaciones_por_estudiante">Reportes calificaciones por estudiante</string>
+    <string name="reportes_asistencia_por_grado">Reportes Asistencia por Grado</string>
+    <string name="reporte_de_conducta_por_alumno">Reporte de conducta por alumno</string>
 </resources>
