revisando y corrigiendo los warnings, trabajando en archivo "resumen" de cada activity y cntrol utilizado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,4 +179,41 @@
     <string name="reportes_calificaciones_por_estudiante">Reportes calificaciones por estudiante</string>
     <string name="reportes_asistencia_por_grado">Reportes Asistencia por Grado</string>
     <string name="reporte_de_conducta_por_alumno">Reporte de conducta por alumno</string>
+    <string name="control_asistencia">CONTROL ASISTENCIA</string>
+    <string name="grado_assitencia">Grado :</string>
+    <string name="seleccione_una_fecha">Seleccione una fecha :</string>
+    <string name="fecha_seleccionada">Fecha Seleccionada</string>
+    <string name="asistencia_registrada">Asistencia registrada :</string>
+    <string name="reporte_asistencia">REPORTE ASISTENCIA</string>
+    <string name="nie">NIE:</string>
+    <string name="ejemplonie">12345566</string>
+    <string name="nombrealumno">NOMBRE:</string>
+    <string name="ejemploNombreAlumno">Tyler Joshep</string>
+    <string name="seleccioneOpcion">SELECCIONE UNA OPCIÓN :</string>
+    <string name="preguntaasistencia">¿FALTÓ EL ALUMNO A CLASES?</string>
+    <string name="inasistenciaconfirmada">SI</string>
+    <string name="asistenciaconfirmada">NO</string>
+    <string name="observaciones">OBSERVACIONES :</string>
+    <string name="guardar_reporteasistencia">GUARDAR REPORTE</string>
+    <string name="cancelar_reporteasistencia">CANCELAR REPORTE</string>
+    <string name="planificaciondel_docente">PLANIFICACIÓN DEL DOCENTE</string>
+    <string name="btn_subirplanificacion">Subir Planificación</string>
+    <string name="planificaciones_subidas">PLANIFICACIONES SUBIDAS</string>
+    <string name="subir_planificacion">SUBIR PLANIFICACIÓN</string>
+    <string name="nombreplanificacion">Nombre de la planificación:</string>
+    <string name="materiaseleccion">Seleccione una materia</string>
+    <string name="infodel_archivo">Información del archivo</string>
+    <string name="nombre_peso_y_ext">Nombre, peso y extensión</string>
+    <string name="guardar_archivo">Guardar Archivo</string>
+    <string name="eliminar_planificacion">ELIMINAR PLANIFICACION</string>
+    <string name="eliminararchivo">Eliminar Archivo</string>
+    <string name="reservar_equipos">RESERVAR EQUIPOS</string>
+    <string name="hacer_nueva_reserva">Hacer Nueva Reserva</string>
+    <string name="historial_reservaciones">HISTORIAL RESERVACIONES</string>
+    <string name="equipo_a_reservar">EQUIPO A RESERVAR:</string>
+    <string name="fechayhora_utilizacion">FECHA / HORA UTILIZACIÓN:</string>
+    <string name="seleccione_una_hora">Seleccione una hora</string>
+    <string name="fechayhora_devolucion">FECHA / HORA DEVOLUCIÓN:</string>
+    <string name="hacer_reservacion">Hacer reservación</string>
+    <string name="cancelar_reserva">Cancelar Reserva</string>
 </resources>
