revisando y corrigiendo los warnings, trabajando en archivo "resumen" de cada activity y cntrol utilizado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,4 +216,66 @@
     <string name="fechayhora_devolucion">FECHA / HORA DEVOLUCIÓN:</string>
     <string name="hacer_reservacion">Hacer reservación</string>
     <string name="cancelar_reserva">Cancelar Reserva</string>
+    <string name="admin_card1">Administración de todo el sistema</string>
+    <string name="admin_card2">Calendario y Agenda</string>
+    <string name="admin_card3">Menú Diario</string>
+    <string name="nombre_del_administrador">Nombre del  administrador</string>
+    <string name="agregar_menu">Agregar Menú</string>
+    <string name="consultar_menu">Consultar Menú</string>
+    <string name="nuevoPlatillo">Nuevo Platillo</string>
+    <string name="nombreplatillo">Nombre del Platillo</string>
+    <string name="descplatillo">Descripción Platillo</string>
+    <string name="precioplatillo">Precio del platillo $ </string>
+    <string name="platilloejemplo">Carne Asada</string>
+    <string name="descripcionplatillo">- 1/4 lb carne\n\-2 Chorizos\n\-Arroz\n\-Tortillas</string>
+    <string name="precioejemplo">2.50</string>
+    <string name="guardar_platillo">Guardar Platillo</string>
+    <string name="cv_admingeneral">Administración General</string>
+    <string name="cv_usuariosyroles">Usuarios y Roles</string>
+    <string name="cv_registroacademico">Registro Académico</string>
+    <string name="cv_reportesadmin">Reportes</string>
+    <string name="cv_prestamoequipo_admin">Préstamo equipo</string>
+    <string name="cv_datosinstitucion">Datos Institucionales</string>
+    <string name="cv_devocionales">Devocionales</string>
+    <string name="cv_avisosadmin">Avisos</string>
+    <string name="cv_versiculos">Versículos</string>
+    <string name="datos_instituci">DATOS INSTITUCIÓN</string>
+    <string name="btn_elegirmonograma">Elegir Monograma</string>
+    <string name="nombre_institucion">Nombre :</string>
+    <string name="liceo_evangelico_la_atarraya">Liceo Evangelico La Atarraya </string>
+    <string name="tel">Teléfono :</string>
+    <string name="email">Email :</string>
+    <string name="direccion">Dirección :</string>
+    <string name="guardar_informacion">GUARDAR INFORMACIÓN</string>
+    <string name="devocionales">DEVOCIONALES</string>
+    <string name="btn_agregardevocional">Agregar devocional</string>
+    <string name="devocionales_programados">Devocionales Programados :</string>
+    <string name="avisos">AVISOS</string>
+    <string name="btn_crearaviso_admin">Crear Nuevo Aviso</string>
+    <string name="versiculo_de_la_semana">VERSÍCULO DE LA SEMANA</string>
+    <string name="btn_agregarversiculo">Agregar versículo</string>
+    <string name="vers_guardados">Versículos guardados :</string>
+    <string name="nuevo_versiculo">NUEVO VERSÍCULO</string>
+    <string name="versiculo">Versículo:</string>
+    <string name="edt_contenidoversiculo">Contenido versículo</string>
+    <string name="pasaje">Pasaje:</string>
+    <string name="edt_pasajeversiculo">Genesis 1:1</string>
+    <string name="semanaversiculo">Semana</string>
+    <string name="btn_guardarversiculo">GUARDAR VERSÍCULO</string>
+    <string name="btn_cancelarversiculo">CANCELAR VERSICULO</string>
+    <string name="cv_plantadocente">Planta Docente</string>
+    <string name="cv_rolesdocente">Roles Docentes</string>
+    <string name="adminitracion_de_planta_docente">ADMINITRACIÓN DE PLANTA DOCENTE</string>
+    <string name="indicaciones_plantadoc">Por seguridad, la cuenta de TIC, y la actual no se pueden editar</string>
+    <string name="btn_agregardocente">Agregar docente</string>
+    <string name="planta_docente_actual">Planta docente actual :</string>
+    <string name="datos_institucion">DATOS INSTITUCIÓN</string>
+    <string name="datos_docente">Datos Docentes</string>
+    <string name="indicaciones_datosdoc">La foto de perfil y la contraseña deben ser cambiadas por el docente.La contraseña por defecto es d0centes@tarraya2020</string>
+    <string name="numeroDui">Dui :</string>
+    <string name="edt_duimaestro">Escribir sin guiones</string>
+    <string name="nombresmaestro">Nombres :</string>
+    <string name="apellidosmaestros">Apellidos:</string>
+    <string name="emailmaestros">Email:</string>
+    <string name="guardardatosdelmaestro">GUARDAR DATOS DEL MAESTRO</string>
 </resources>
