revisando y corrigiendo los warnings, trabajando en archivo "resumen" de cada activity y cntrol utilizado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -278,4 +278,28 @@
     <string name="apellidosmaestros">Apellidos:</string>
     <string name="emailmaestros">Email:</string>
     <string name="guardardatosdelmaestro">GUARDAR DATOS DEL MAESTRO</string>
+    <string name="admininroles_personaldocente">Administración de Roles \n\ para personal Docente</string>
+    <string name="indicaciones_rolesdocente">En esta página, se administra el nivel de acceso de los docentes al sistema.</string>
+    <string name="listado_docentes_roles">LISTADO DOCENTES + ROLES</string>
+    <string name="indicaciones_modifroles">La foto de perfil y la contraseña deben ser cambiadas por el docente.La contraseña por defecto es d0centes@tarraya2020</string>
+    <string name="ejemplo_apellido">Henriquez Solorzano</string>
+    <string name="ejemploemail">henriquezsolorzano@gob.es.sv</string>
+    <string name="cv_adminalumnos">Administración Alumnos</string>
+    <string name="cv_promgrados">Promoción Grados</string>
+    <string name="cv_periodosasig">Períodos Asignatura</string>
+    <string name="cv_ponderaasignatura">Ponderación Asignatura</string>
+    <string name="cv_registrarequipo">REGISTRAR EQUIPOS</string>
+    <string name="cv_adminreservas">ADMINISTRAR RESERVAS</string>
+    <string name="indicaciones_registrarequipo">Por favor completar todos los campos para realizar un nuevo registro</string>
+    <string name="edt_nombreequipo">Nombre\n\del equipo:</string>
+    <string name="edt_marcaequipo">Marca:</string>
+    <string name="edt_modeloequipo">Modelo:</string>
+    <string name="edt_numserieequipo">Num Serie:</string>
+    <string name="sp_estadoequipo">Estado</string>
+    <string name="btn_guardarequipo">GUARDAR EQUIPO</string>
+    <string name="btn_cancelarregistro">CANCELAR</string>
+    <string name="tv_historialreservas">HISTORIAL RESERVACIONES</string>
+    <string name="imagen_card_registrar_equipo">IMAGEN CARD REGISTRAR EQUIPO</string>
+    <string name="imagen_card_reservarequipos">imagen card reservarequipos</string>
+    <string name="imagen_card_adminreservas">Imagen card adminreservas</string>
 </resources>
